[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 420, 170 )

[node name="EnemyTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Enemy" parent="." instance=ExtResource( 3 )]
speed = 50

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1020, 600 )
speed = 50

[node name="Enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 590 )
speed = 50

[node name="Enemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1020, 0 )
speed = 50

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 420, 170 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
